# Parallel-Graph-Coloring

./: README.md  c_cpp_properties.json
Benchmarks/: benchmarks.csv  greedy_performance_large_graph.csv  greedy_performance_scale_free_graph.csv  greedy_performance_small_dense_real_graph.csv  greedy_performance_small_sparse_real_graph.csv  greedy_performance_undirected_graph.csv  jp_performance_large_graph_2_threads.csv  jp_performance_large_graph_4_threads.csv  jp_performance_large_graph_8_threads.csv  jp_performance_scale_free_graph_2_threads.csv  jp_performance_scale_free_graph_4_threads.csv  jp_performance_scale_free_graph_8_threads.csv  jp_performance_small_dense_real_graph_2_threads.csv  jp_performance_small_dense_real_graph_4_threads.csv  jp_performance_small_dense_real_graph_8_threads.csv  jp_performance_small_sparse_real_graph_2_threads.csv  jp_performance_small_sparse_real_graph_4_threads.csv  jp_performance_small_sparse_real_graph_8_threads.csv  jp_performance_undirected_graph_2_threads.csv  jp_performance_undirected_graph_4_threads.csv  jp_performance_undirected_graph_8_threads.csv  luby_performance_large_graph_2_threads.csv  luby_performance_large_graph_4_threads.csv  luby_performance_large_graph_8_threads.csv  test.csv  (+12 more)
src/: CMakeLists.txt  main.cpp
src/Algorithms/: JP.cpp  JP.h  Luby.cpp  Luby.h  SeqAlg.cpp  SeqAlg.h  compute.h
src/Helpers/: Graph.cpp  Graph.h  GraphColor.cpp  GraphColor.h  Helper.cpp  Helper.h  Jobs.hpp  Loaders.cpp  Node.cpp  Node.h  ParallelProcessing.hpp  Performance.h  Split_Range.h  TimeLog.h
src/Tests/: ba10k2d.gra
(+5 files in other folders)
